# nao_chatting

./: .gitignore
NAOChat/: Chatting.py  NAOConf.py  NAOInteract.py  NAOSpeechRecog.py  stop.py
NAOChat/resource/: interact.yaml  net.yaml
NAOListen/: CMakeLists.txt  allisten.cpp  allisten.h  main.cpp  qiproject.xml  testhelloworld.cpp
NAOListen/.qi/: qibuild.xml
chatting_demo/: Dockerfile
chatting_demo/resource/: add_key.py  entry_point.sh  launch_script.py
